# pow-blockchain

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  build.sh  docker-compose.yml
.github/workflows/: pipeline.yml
block-orchestrator/: .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  playground.ipynb  pyproject.toml
block-orchestrator/block_orchestrator/: main.py
block-orchestrator/block_orchestrator/api/: app.py
block-orchestrator/block_orchestrator/api/routes/: __init__.py  base.py  transaction.py
block-orchestrator/block_orchestrator/api/routes/block/: __init__.py  block.py  dependencies.py
block-orchestrator/block_orchestrator/api/routes/transaction/: __init__.py  dependencies.py  transaction.py
block-orchestrator/block_orchestrator/helpers/: __init__.py  background_task.py
block-orchestrator/block_orchestrator/infrastructure/: __init__.py  rabbitmq.py  redis.py
block-orchestrator/block_orchestrator/playground/: playground.ipynb
block-orchestrator/block_orchestrator/schemas/: __init__.py  block.py  task.py  transaction.py
block-orchestrator/block_orchestrator/services/: __init__.py  block.py  transaction.py
block-orchestrator/block_orchestrator/utils/: __init__.py  logger.py  scheduler.py  settings.py
block-orchestrator/src/: main.py  server.py
block-orchestrator/src/api/: app.py
block-orchestrator/src/api/routes/: __init__.py  transaction.py
block-orchestrator/src/infrastructure/: __init__.py  rabbitmq.py  redis.py
block-orchestrator/src/schemas/: __init__.py  block.py
block-orchestrator/src/utils/: logger.py  settings.py
blocks-coordinator/: README.md  docker-compose.yml
blocks-coordinator/src/: server.py
blocks-coordinator/src/model/: block.py
blocks-coordinator/src/plugins/: rabbitmq.py
client/: .env.example  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
client/helpers/: __init__.py  generate_hash.py  generate_wallet_address.py  send_transaction.py
client/utils/: __init__.py  settings.py
kubernetes/: config.yml  namespaces.yml
kubernetes/applications/: coordinator-service.yml  coordinator.yml
kubernetes/services/: rabbitmq.yml
minero/: README.md
pool-manager/: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
pool-manager/pool_manager/: main.py
pool-manager/pool_manager/api/: app.py
pool-manager/pool_manager/infrastructure/: google_cloud.py  rabbitmq.py  redis.py
pool-manager/pool_manager/schemas/: __init__.py
pool-manager/src/: server.py
pow-miner/: .env.example  .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
pow-miner/pow_miner/: main.py
pow-miner/pow_miner/api/: app.py
pow-miner/pow_miner/api/routes/: base.py
pow-miner/pow_miner/helpers/: __init__.py  background_task.py  check_gpu.py
pow-miner/pow_miner/helpers/cpu/: __init__.py  find_nonce.py
pow-miner/pow_miner/helpers/cuda/: find_nonce.cu  md5.cu
pow-miner/pow_miner/infrastructure/: __init__.py  rabbitmq.py  redis.py
pow-miner/pow_miner/schemas/: __init__.py  block.py  task.py  transaction.py
pow-miner/pow_miner/services/: task.py
pow-miner/pow_miner/utils/: scheduler.py  settings.py
pow-miner/src/: server.py
pow-miner/src/utils/: check_gpu.py
terraform/: 02-apis.tf  03-network.tf  04-subnetworks.tf  05-router.tf  08-kubernetes.tf  README.md
(+7 files in other folders)
