[project]
name = "blocks-coordinator"
version = "0.1.0"
description = "Orchestrator for managing block operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
    "fastapi[standard]>=0.121.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
]

[project.scripts]
server = "src.__main__:main"

