[project]
name = "blocks-coordinator"
version = "0.1.0"
description = "Orchestrator for managing block operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
    "fastapi[standard]>=0.121.3",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ipykernel>=7.1.0",
]

[tool.ruff]
line-length = 88


[tool.pylint]
disable = [
    "missing-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
]