[project]
name = "blockchain-transaction-client"
version = "0.1.0"
description = "Transaction client for sending automated transactions to the blockchain network"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ipykernel>=7.1.0",
]

[tool.ruff]
line-length = 88


[tool.pylint]
disable = [
    "missing-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
]