[project]
name = "blockchain-transaction-client"
version = "0.1.0"
description = "Transaction client for sending automated transactions to the blockchain network"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "loguru>=0.7.3",
  "pydantic-settings>=2",
  "requests>=2.32.5",
]

[dependency-groups]
dev = [
  "ipykernel>=7.1",
  "pre-commit>=3.5",
]

[tool.ruff]
line-length = 88

[tool.pylint]
disable = [
  "missing-docstring",
  "missing-module-docstring",
  "missing-function-docstring",
]